real data false pos false neg rates

--- a/jcgs_reviewer/reviewer_2.tex
+++ b/jcgs_reviewer/reviewer_2.tex
@@ -35,6 +35,8 @@
 		
 		\point{Examples in Section 3. Could you add false positive and false negative in each of the tables? And how about the computational speed? The p in each of the examples is still small. Could you provide some general comments on how well the new algorithm can handle large p?}
 		
-		\reply Section 4 was a classification problem, we have provided false positive and false negative rates in Table 5. The simulations in Section 3 are not classification problems. Therefore we adapted the reviewer's request for false positive and false negative rates as follows. In Section 3.3 (?), we have included the percent of estimated model parameters identified to be zero that were actually nonzero and the percent of estimated model parameters identified to be nonzero that were actually zero. Similarly, in Section 3.2, we have included the percent of estimated functions identified to be zero that were actually nonzero and the percent of estimated functions identified to be nonzero that were actually zero.
+		\reply Section 4 was a classification problem, we have provided false positive and false negative rates in Table 6. For the examples in Section 3, it's unclear what false positive and false negative would mean since they are regression problems. In the previous submission, we 
+		
+		
 	\end{enumerate}
 \end{document}
