--- a/jcgs_reviewer/reviewer_1.tex
+++ b/jcgs_reviewer/reviewer_1.tex
@@ -41,7 +41,7 @@
 		
 		\point{The authors note that the models considered in Sections 2.4.2 and 2.4.3 are usually employed with only two regularization parameters but propose using a larger set of regularization parameters. In the corresponding simulations in Sections 3.2 and 3.3, they compare using a larger set of regularization parameters against using two regularization parameters selected using grid search. The grid spaces considered are fairly small, so it’s not clear if the improved performance for gradient descent is due to the additional regularization parameters or due to the dependence of performance on the grid space. To provide additional insight into what’s causing the difference in performance, could the authors also present results using gradient descent, Nelder-mead, and Spearmint for the two parameter case?}
 		
-		\reply We have added gradient descent, Nelder-mead, and spearmint for the two-parameter case for the examples in Sections 3.2 and 3.3.
+		\reply We have added gradient descent, Nelder-mead, and spearmint for the two-parameter case in the appendix.
 		
 		\point{The authors report average performance and standard errors for the simulations done in Section 3. How many simulation runs were used in each example?}
 		
@@ -49,7 +49,7 @@
 		
 		\point{In Section 3, two different starting values were considered for Nelder-mead and gradient descent. How sensitive were the results to the choice of starting values?}
 		
-		\reply We considered four initializations for Nelder-mead and gradient descent for the un-pooled sparse group lasso which resulted in smaller validation error, but not significantly so. Perhaps more importantly, the average validation error attained by gradient descent remained smaller than that compared to Nelder-mead. We would like to keep the paper restricted to two initialization points however since it shows that one does not need very many starting points. In the setting where there are many penalty parameters, the number of possible initialization points grows exponentially; the point of the paper is to show that the computational load does not grow exponentially with the number of penalty parameters (in contrast to grid search). We have added a comment regarding sensitivity of the methods to their starting values in Section 3, as well as an explanation for why we only use two initialization points.
+		\reply We tried increasing the number of initializations for Nelder-mead and gradient descent in the un-pooled sparse group lasso and present the results in the Appendix. Both methods are indeed sensitive to their initializations, but gradient descent can find penalty parameters with lower validation error than Nelder-mead.
 		
 		\point{The empirical results for gradient descent depend on $\alpha$, $\beta$, and $\delta$. The authors mention ranges considered for these parameters in Section 2.5. How were these parameters ultimately selected in the evaluations in Sections 3 and 4?}
 		
@@ -70,11 +70,11 @@ n = 90 in the other two cases?}
 		
 		\point{$g$ is undefined in Table 4}
 		
-		\reply We had meant for $g$ to denote the true number of groups, but this was already given in equation (?). We have removed it.
+		\reply We had meant for $g$ to denote the true number of groups, but this was already given in equation (??). We have removed it.
 		
 		\point{In Table 4, could the authors provide intuition for why there is a large difference in validation error and test error for gradient descent?}
 		
-		\reply We have added a paragraph in Section 3.3 (check this again later) to provide some intuition for the observed behavior.
+		\reply We have added a paragraph in Section 3.3 (??check this again later) to provide some intuition for the observed behavior.
 	\end{enumerate} 
 	
 \end{document}
